2006-07-06  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Add 32x32 to SUBDIRS

	* configure.in: Add 32x32/apps and 32x32/places

	* */apps/utilities-system-monitor.*: Add better drawn icons from Lapo

	* 24x24/mimetypes/application-x-executable.png: Actually add the icon

	* 32x32/Makefile.am: Add apps to SUBDIRS

	* 32x32/devices/Makefile.am: Remove video-display as it's missing

	* 32x32/places/Makefile.am: Replace svg extensions with png

	* scalable/emblems/Makefile.am: emblem-symbolic-link not here

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 32x32/devices: add in 32x32

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* emblem-symbolic-link: in all sizes, tango style

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 24x24/mimetypes/application-x-executable.png: was missing for some reason

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* template/: removing outdated template

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 32x32/places/folder-remote
	* 32x32/places/folder-saved-search
	* 32x32/places/folder
	* 32x32/places/user-home
	* 32x32/places/user-trash
	* 32x32/status/folder-drag-accept
	* 32x32/status/folder-open
	* 32x32/status/folder-visiting
	* 32x32/status/image-loading: most visible icons at 32x32

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* dialog-warning, dialog-error, dialog-information: in all sizes

2006-07-05  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/gnome-globe.*:
	Removed gnome-globe as it's replaced by applications-internet

2006-07-05  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/gnome-monitor.*:
	* */apps/utilities-system-monitor.*:
	Replace gnome-monitor with a redrawn utilities-system-monitor icon

	Fixes #306537

2006-07-05  Jakub Steiner <jimmac@ximian.com>

	* scalable/emblems/Makefile.am: forgot to remove emblem-bin. bug
	#346580

2006-07-04  Jakub Steiner <jimmac@ximian.com>

	* appointment-soon, appointment-missed: tangoed
	* emblem-bin: removed
	