@@ -94,3 +94,6 @@ png_DATA =				\
 EXTRA_DIST = $(icon_in_files) $(png_DATA)
 
 CLEANFILES = $(icon_DATA)
+
+install-data-local: install-iconsDATA
+	(cd $(DESTDIR)$(themedir)/$(size) && $(ICONMAP) -c $(context))
